data/yamls/deployment.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    template: egress-rman-nsi
  name: egressgateway-svc
spec:
  ports:
    - name: http-7000
      port: 7000
  selector:
    app: egressgateway-ci01098420-idevgen-udkzift
    istio: egressgateway-ci01098420-idevgen-udkzift
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: egressgateway-ci01098420-idevgen-udkzift
    app.kubernetes.io/component: gateways
    app.kubernetes.io/instance: ci01994970-idevgen-control-panel-synapse-ift
    app.kubernetes.io/name: gateways
    app.kubernetes.io/part-of: istio
    chart: gateways
    heritage: Tiller
    istio: egressgateway-ci01098420-idevgen-udkzift
    release: istio
    template: egress-rman-nsi
  name: egressgateway-ci01098420-idevgen-udkzift
spec:
  progressDeadlineSeconds: 1200
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: egressgateway-ci01098420-idevgen-udkzift
      istio: egressgateway-ci01098420-idevgen-udkzift
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      creationTimestamp: null
      labels:
        app: egressgateway-ci01098420-idevgen-udkzift
        chart: gateways
        heritage: Tiller
        istio: egressgateway-ci01098420-idevgen-udkzift
        release: istio
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
              weight: 2
            - preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - ppc64le
              weight: 2
            - preference:
                matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - s390x
              weight: 2
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - ppc64le
                      - s390x
      containers:
        - args:
            - proxy
            - router
            - --domain
            - $(POD_NAMESPACE).svc.cluster.local
            - --proxyLogLevel=warning
            - --proxyComponentLogLevel=misc:error
            - --log_output_level=default:info
            - --serviceCluster
            - egressgateway-ci01098420-idevgen-udkzift.$(POD_NAMESPACE)
            - --trust-domain=cluster.local
          image: registry.redhat.io/openshift-service-mesh/proxyv2-rhel8@sha256:320f5bd35c208e00005c01ce0e83c8f05276119f273e9f881da950fdfff59a13
          imagePullPolicy: Always
          name: istio-proxy
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz/ready
              port: 15021
              scheme: HTTP
            initialDelaySeconds: 1
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 600m
              memory: 900Mi
            requests:
              cpu: 400m
              memory: 700Mi
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/istio/proxy
              name: istio-envoy
            - mountPath: /var/run/secrets/istio
              name: istiod-ca-cert
            - mountPath: /etc/istio/pod
              name: podinfo
            - mountPath: /etc/istio/egressgateway-certs-host
              name: egressgateway-certs
              readOnly: true
            - mountPath: /etc/istio/egressgateway-ca-certs-host
              name: egressgateway-ca-certs
              readOnly: true
            - mountPath: /mnt/ott-uds-socket
              name: ott-uds-socket
        - envFrom:
            - secretRef:
                name: synapse-lt-module-1-ott-passwords
            - configMapRef:
                name: synapse-lt-module-1-ott-settings
          image: registry.delta.sbrf.ru/sigma/pprb/ci00641491/ci01125613_ott/ott-client-api@sha256:764085215941ecb7e90429326113fe63b78b024e8595ac3249c5d88d128574ac
          imagePullPolicy: Always
          name: ott-sidecar
          readinessProbe:
            failureThreshold: 30
            httpGet:
              path: /healthy
              port: 8086
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 700m
              memory: 900Mi
            requests:
              cpu: 500m
              memory: 700Mi
          securityContext:
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /mnt/secrets
              name: ott-certs
              readOnly: true
            - mountPath: /tmp/ott-logback
              name: ott-logback
              readOnly: true
            - mountPath: /mnt/ott-uds-socket
              name: ott-uds-socket
            - mountPath: /tmp
              name: tempdir
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccountName: default
      terminationGracePeriodSeconds: 60
      volumes:
        - emptyDir: {}
          name: istio-envoy
        - emptyDir: {}
          name: tempdir
          defaultMode: 288
        - configMap:
            defaultMode: 256
            name: istio-ca-root-cert
          name: istiod-ca-cert
        - downwardAPI:
            defaultMode: 256
            items:
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.labels
                path: labels
              - fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.annotations
                path: annotations
          name: podinfo
        - name: egressgateway-certs
          secret:
            defaultMode: 256
            optional: true
            secretName: egressgateway-certs
        - name: egressgateway-ca-certs
          secret:
            defaultMode: 256
            optional: true
            secretName: egressgateway-ca-certs
        - configMap:
            defaultMode: 256
            name: ott-logback
          name: ott-logback
        - name: ott-certs
          secret:
            defaultMode: 256
            secretName: synapse-lt-module-1-ott-certs
        - emptyDir:
            medium: Memory
          name: ott-uds-socket
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  labels:
    template: egress-rman-nsi
  name: external-host-se
spec:
  exportTo:
    - .
  hosts:
    - nsi-ift.dev-apps.ocp-geo.delta.sbrf.ru
  ports:
    - name: tls-443
      number: 443
      protocol: TLS
    - name: http-7500
      number: 7500
      protocol: HTTP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
    template: egress-rman-nsi
  name: external-host-dr
spec:
  exportTo:
    - .
  host: nsi-ift.dev-apps.ocp-geo.delta.sbrf.ru
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
      - port:
          number: 443
        tls:
          caCertificates: /etc/istio/egressgateway-ca-certs-host/ca-chain.cert.pem
          clientCertificate: /etc/istio/egressgateway-certs-host/tls.crt
          mode: MUTUAL
          privateKey: /etc/istio/egressgateway-certs-host/tls.key
          sni: nsi-ift.dev-apps.ocp-geo.delta.sbrf.ru
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  labels:
    template: egress-rman-nsi
  name: egressgateway-gw
spec:
  selector:
    istio: egressgateway-ci01098420-idevgen-udkzift
  servers:
    - hosts:
        - nsi-ift.dev-apps.ocp-geo.delta.sbrf.ru
      port:
        name: http-7000
        number: 7000
        protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    template: egress-rman-nsi
  name: external-host-vs
spec:
  exportTo:
    - .
  gateways:
    - egressgateway-gw
    - mesh
  hosts:
    - nsi-ift.dev-apps.ocp-geo.delta.sbrf.ru
  http:
    - match:
        - gateways:
            - mesh
          port: 7500
      rewrite:
        authority: nsi-ift.dev-apps.ocp-geo.delta.sbrf.ru
      route:
        - destination:
            host: egressgateway-svc
            port:
              number: 7000
    - match:
        - gateways:
            - egressgateway-gw
          port: 7000
      rewrite:
        authority: nsi-ift.dev-apps.ocp-geo.delta.sbrf.ru
      route:
        - destination:
            host: nsi-ift.dev-apps.ocp-geo.delta.sbrf.ru
            port:
              number: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  labels:
    template: egress-rman-nsi
  name: ott-egress-auth-filter
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: envoy.http_connection_manager
          portNumber: 7000
      patch:
        operation: INSERT_BEFORE
        value:
          config:
            failure_mode_allow: false
            grpc_service:
              google_grpc:
                stat_prefix: ext_authz
                target_uri: unix:/mnt/ott-uds-socket/ott.socket
              timeout: 2s
            with_request_body:
              allow_partial_message: true
              max_request_bytes: 8192
          name: envoy.ext_authz
  workloadSelector:
    labels:
      app: egressgateway-ci01098420-idevgen-udkzift
